@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-24T01:16:41Z",
+  "timestamp" : "2022-11-25T01:11:18Z",
   "count_outdated" : 670,
   "uniques_outdated" : 380,
-  "count" : 706,
-  "uniques" : 398,
+  "count" : 707,
+  "uniques" : 399,
   "clones" : [
     {
       "timestamp": "2022-11-12T00:00:00Z",
@@ -86,6 +86,13 @@
       "timestamp": "2022-11-23T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
