@@ -1,3 +1,11 @@
+2022-11-25T01:11:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3544577778 # 1059
+* notice: last 14d: unq all: 8 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 670 / 398 706
+* notice: next accum: outdated-unq outdated-all / unq all: 380 670 / 399 707
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-24]
+
 2022-11-24T01:16:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3536892380 # 1056
 * notice: last 14d: unq all: 8 36
